# classifieds-platform

./: Makefile  README.md
classified-service/: .env.example  Dockerfile  pyproject.toml
classified-service/docker_compose/: app.dev.yaml  app.yaml  migrate.yaml  postgres.yaml
classified-service/src/application/commands/: classified.py
classified-service/src/application/events/: classified.py
classified-service/src/application/mediator/: command.py
classified-service/src/domain/entities/: classified.py
classified-service/src/domain/events/: classified.py
classified-service/src/domain/exceptions/: base.py
classified-service/src/infra/database/: connection.py  converters.py
classified-service/src/infra/message_brokers/: kafka.py
classified-service/src/presentation/api/: config.py  lifespan.py  main.py
classifieds-service/: pyproject.toml
classifieds-service/src/application/commands/: test.py
classifieds-service/src/application/events/: test_event.py
classifieds-service/src/application/exceptions/: mediator.py
classifieds-service/src/application/mediator/: base.py  command.py  query.py
classifieds-service/src/domain/entities/: test.py
classifieds-service/src/infra/message_brokers/: base.py
classifieds-service/src/presentation/api/: main.py
user-service/: .env.example  Dockerfile  pyproject.toml
user-service/docker_compose/: app.dev.yaml  app.yaml  migrate.yaml  postgres.yaml  redis.yaml
user-service/src/application/commands/: base.py  test.py  user.py
user-service/src/application/events/: base.py  test_event.py  user.py
user-service/src/application/exceptions/: base.py  user.py
user-service/src/application/mediator/: base.py  event.py  query.py
user-service/src/application/queries/: user.py
user-service/src/application/services/: base.py  user.py
user-service/src/domain/entities/: base.py  test.py  user.py
user-service/src/domain/events/: user.py
user-service/src/domain/exceptions/: base.py  user.py
user-service/src/domain/values/: base.py  user.py
user-service/src/infra/database/: converters.py
(+36 files in other folders)
