[tool.poetry]
name = "classified-service"
version = "0.1.0"
description = ""
authors = ["slev-v <stasrudometkin2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dishka = "^1.2.0"
fastapi = "^0.111.0"
sqlalchemy = {extras = ["postgresql-asyncpg"], version = "^2.0.30"}
alembic = "^1.13.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
aiojobs = "^1.2.1"
aiokafka = "^0.11.0"
orjson = "^3.10.6"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.6"
mypy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
